--- a/nera-frontend/package.json
+++ b/nera-frontend/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mime": "^4.0.7",
-    "mongoose": "^7.0.0"
+    "mongoose": "^7.0.0",
+    "pg": "^8.16.3"
   }
 }
